--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cupertino_icons: ^1.0.5
   font_awesome_flutter: ^10.5.0
   flutter_launcher_icons: ^0.13.1
+  equatable: ^2.0.5
+  either_dart: ^1.0.0
 
 
 dev_dependencies:
