--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   equatable: ^2.0.5
   either_dart: ^1.0.0
+  uuid: ^4.3.3
 
 
 dev_dependencies:
